kubernetes/dsview_ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dsview-service
  labels:
    app: dsview
spec:
  selector:
    app: dsview
  ports:
    - name: dsview-api
      protocol: TCP
      port: 8000
      targetPort: 8000
    - name: dsview-labels
      protocol: TCP
      port: 8501
      targetPort: 8501
    - name: dsview-dashboard
      protocol: TCP
      port: 2718
      targetPort: 2718

  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dsview-ingest-ingress
  namespace: user-tdurouchoux
  labels:
    app: dsview
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-dsview-ingest
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  rules:
    - host: dsview-ingest.lab.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dsview-service
                port:
                  number: 8000
  tls:
    - hosts:
        - dsview-ingest.lab.sspcloud.fr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dsview-dashboard-ingress
  namespace: user-tdurouchoux
  labels:
    app: dsview
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-dsview-dashboard
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  rules:
    - host: dsview-dashboard.lab.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dsview-service
                port:
                  number: 2718
  tls:
    - hosts:
        - dsview-dashboard.lab.sspcloud.fr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dsview-labels-ingress
  namespace: user-tdurouchoux
  labels:
    app: dsview
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-dsview-dashboard
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  rules:
    - host: dsview-labels.lab.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dsview-service
                port:
                  number: 8501
  tls:
    - hosts:
        - dsview-labels.lab.sspcloud.fr
