kubernetes/kube_full_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dsview
  labels:
    app: dsview
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dsview
  template:
    metadata:
      labels:
        app: dsview
    spec:
      serviceAccountName: dsview-sa
      containers:
      - name: dsview-deploy
        image: ghcr.io/tdurouchoux/dsview:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        - containerPort: 8501
        livenessProbe:
          httpGet:
            path: /_stcore/health
            port: 8501
            scheme: HTTP
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /_stcore/health
            port: 8501
            scheme: HTTP
          timeoutSeconds: 1
        resources:
          requests:
            memory: "1000Mi"
            cpu: "1000m"
          limits:
            memory: "8000Mi"
            cpu: "4000m"
---
apiVersion: v1
kind: Service
metadata:
  name: dsview-service
  labels:
    app: dsview
spec:
  selector:
    app: dsview
  ports:
  - name: dsview-ingest
    protocol: TCP
    port: 8000
    targetPort: 8000
  - name: dsview-label
    protocol: TCP
    port: 8501
    targetPort: 8501
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dsview-ingest-ingress
  namespace: user-tdurouchoux
  labels:
    app: dsview
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-dsview-ingest
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  ingressClassName: nginx
  rules:
  - host: dsview-ingest.lab.sspcloud.fr
    http: 
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: dsview-service
              port:
                number: 8000
  tls:
  - hosts:
    - dsview-ingest.lab.sspcloud.fr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dsview-label-ingress
  namespace: user-tdurouchoux
  labels:
    app: dsview
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-dsview-label
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  ingressClassName: nginx
  rules:
  - host: dsview-label.lab.sspcloud.fr
    http: 
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: dsview-service
              port:
                number: 8501
  tls:
  - hosts:
    - dsview-label.lab.sspcloud.fr
